--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -7,6 +7,7 @@
 
 .navbar {
   display: flex;
+  width: 100%;
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
@@ -54,21 +55,58 @@
 .navbar-center a:hover {
   color: #6F4B9B;
 }
+.dropdown {
+  display: none; 
+  position: relative;
+}
+
+.dropdown-btn {
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  padding: 5px;
+  cursor: pointer;
+  display: none; /* Tersembunyi pada layar besar */
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  padding: 10px;
+  margin: 0;
+  width: 150px;
+  z-index: 100;
+}
+
+.dropdown-menu a {
+  text-decoration: none;
+  color: black;
+  display: block;
+  padding: 5px 0;
+}
+
+.dropdown-menu a:hover {
+  color: #6F4B9B;
+}
 
 .content {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: 80px;
 }
 
 .box {
   display: flex;
-  width: 1300px; 
+  width: 100%;
 }
 
 .pic {
-  width: 450px;
-  height: 520px;
+  width: 400px;
+  height: 350px;
   margin-right: 20px;
   border-radius: 8px; 
 }
@@ -76,9 +114,8 @@
 .product {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   margin-left: 50px;
-  width: 500px;
+  width: 100%;
 }
 
 .product-name {
@@ -94,30 +131,6 @@
   font-size: 24px;
 }
 
-.rating {
-  display: flex;
-  align-items: center;
-  gap: 4px;
-  font-size: 14px;
-  color: #333;
-}
-
-.rating-value {
-  font-size: 14px;
-  font-weight: 500;
-  color: #000;
-}
-
-.stars {
-  color: #FFD700; 
-  font-size: 14px;
-}
-
-.review-count {
-  font-size: 12px;
-  color: #888;
-}
-
 .viewer {
   font-size: 12px;
   color: #888;
@@ -129,8 +142,8 @@
   border-radius: 8px;
   padding: 15px;
   margin-top: 15px;
-  width: 750px;
-  height: 400px; 
+  width: 400px;
+  height: 200px; 
 }
 
 .text {
@@ -140,24 +153,23 @@
 
 .button-container {
   display: flex;
-  gap: 15px;
-  margin: 15px 300px;
+  flex-direction: row;
+  gap: 60px;
+  margin: 15px;
 }
 
 .back { background-color:  #B384CE;
   font-family: 'Roboto', sans-serif;
   color: #ffffff;
-  width: 200px;
+  width: 150px;
   border-width: 1px;
   border-color: #000;
   border-radius: 8px;
   font-size: 15px;
   cursor: pointer;
   transition: opacity 0.20ms;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
   }
 
 .back:hover {
@@ -172,7 +184,7 @@
 .whatsapp{ background-color: rgb(7, 196, 76);
   font-family: 'Roboto', sans-serif;
   color: rgb(255, 255, 255);
-  width: 200px;
+  width: 150px;
   border-width: 1px;
   border-color: #000;
   border-radius: 8px;
@@ -180,249 +192,140 @@
   cursor: pointer;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-left: 10px;
-  margin-right: -430px;
+  margin-left: 5px;
+  }
+  .whatsapp:hover {
+    background-color: rgba(0, 154, 54, 0.798);
+    opacity: 0.7;
+  }
+  
+  .whatsapp:active {
+    background-color: rgb(228, 220, 220);
   }
 
-  .review {
-    flex-direction: row;
-    width: 700px;
-    padding: 20px;
-    background-color: #fff;
-    margin-top: 50px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    gap: 4px;
-    margin-top: 50px;
-    color: #333;
+.footer {
+  width: 100%;
+  height: 300px;
+  background-color: #333;
+  color: #fff;
 }
 
-.rating-box {
-  width: 240px;
-  float: left;
-  text-align: center;
-  justify-content: center;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  color: #333;
-  padding: 25px;
-  border: 1px solid #ddd;
-  border-radius: 20px;
-}
-
-.overall-rating {
+.footer-container {
   display: flex;
-  align-items: baseline;
-  font-size: 40px;
-  color: #000;
-  margin-bottom: 10px;
+  align-items: flex-start;
 }
 
-.star-point {
-  color: #FFD700; 
-  font-size: 40px;
-  width: 50px;
-  margin-right: 5px;
-}
-.star {
-  color: #FFD700; /* Gold color for stars */
-  width: 30px;
-  margin-right: 5px;
+.footer-links{
+  margin-left: 40px;
+  margin-top: 50px;
 }
 
-.rating-number {
-  font-size: 50px;
-  font-weight: bold;
+.footer-links h3{
+  font-size: 1.2rem;
+  text-align: left;
+  margin-bottom: 10px;    
 }
 
-.out-of {
-  font-size: 20px;
-  color: #888;
-  margin-left: 2px;
+.footer-links ul {
+  list-style-type: none;
 }
 
-.rating-satisfaction {
-  font-size: 14px;
-  color: #333;
-  margin: 5px 0;
+.footer-links ul li a {
+  color: #ccc;
+  text-decoration: double;
+  font-size: 1.1rem;
+  transition: color 0.3s ease;
+  cursor: pointer;
 }
 
-.rating-count {
-  font-size: 12px;
-  color: #666;
-  margin-bottom: 15px;
+.footer-links a{
+  margin-top: 20px;
 }
 
-.rating-distribution {
-  font-size: 12px;
-  color: #333;
-  margin-bottom: 20px;
+.footer-service{
+  margin-top: 50px;
+  margin-left: 150px;
 }
 
-.rating-distribution p {
+.footer-service h3{
+  font-size: 1.2rem;
+  text-align: left;
+}
+
+.footer-service ul{
+  list-style-type: none;
+  padding: 10px;
+}
+
+.footer-service ul li a {
+  color: #ccc;
+  text-decoration: double;
+  font-size: 1rem;
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
+
+.footer-social {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 5px 0;
+  flex-direction: column;
+  margin-left: 550px;
+  gap: 10px;
+  cursor: pointer;
 }
 
-.bar {
-  flex: 1;
-  height: 5px;
-  background-color: #ddd;
-  margin: 0 8px;
-  border-radius: 3px;
-  overflow: hidden;
-}
-
-.filled-bar {
-  height: 100%;
-  background-color: #B384CE; /* Customize color as needed */
-}
-
-.rating-classification {
-  font-size: 14px;
-  color: #000;
-  margin-top: 15px;
-}
-
-.rating-classification p {
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.rating-classification label {
-  font-size: 14px;
-  color: #333;
+.social-icons {
   display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
-input[type="checkbox"] {
-  margin-right: 5px;
-}
-.user-experience {
-  width: 350px;
-  margin-left: 20px;
-}
-
-.user-review {
-  border-top: 1px solid #ddd;
-  padding: 10px 0;
-}
-
-.user-review:first-child {
-  border-top: none;
-}
-
-.user-stars {
-  font-size: 16px;
-  color: #FFD700; 
-  margin-bottom: 5px; 
-}
-
-.user-rating {
-  display: flex;
-  flex-direction:column;
-  align-items: justify;
-}
-
-.user-info {
   flex-direction: row;
-  align-items: center;
-  gap: 10px; 
-  margin-bottom: 5px;
-}
-
-.profile-pic {
-  width: 40px; 
-  height: 40px;
-  border-radius: 50%; 
-  background-color: #ccc; 
-}
-
-.username {
-  font-weight: bold;
-  color: #333;
-  margin: 0;
-}
-
-.variant{
-  font-size: 12px;
-  color: #666;
-  margin: 2px 0;
-}
-
-.comment {
-  font-size: 14px;
-  color: #000000;
-  margin: 2px 0;
-}
-
-  .footer {
-    background-color: #1A1A1A;
-    color: #fff;
-    padding: 30px 10%;
-    margin-top: 50px;
-  }
+  gap: 10px;
+  cursor: pointer;
   
-  .footer-container {
+}
+.call .envelope{
+  text-align: left;
+  margin-left: 550px;
+}
+
+.footer-social h4{
+  font-size: 1.2rem;
+  margin-top: 50px;
+}
+
+.footer-bottom {
+  position: absolute;
+  text-align: center;
+  font-size: 0.9rem;
+  color: #aaa;
+  margin-top: 70px;
+  margin-left: 30px;
+}
+@media (max-width:800px) {
+  .navbar-center {
+    display: none; /* Sembunyikan menu utama */
+  }
+
+  .dropdown {
+    display: block; /* Tampilkan dropdown */
+  }
+
+  .dropdown-btn {
+    display: block; /* Tampilkan tombol dropdown */
+  }
+
+  .dropdown-menu {
+    display: none; /* Default: sembunyikan menu dropdown */
+  }
+
+  .dropdown.show .dropdown-menu {
+    display: block; /* Tampilkan menu dropdown saat dropdown aktif */
+  }
+  .content{
+    flex-direction: column;
+  }
+  .product {
     display: flex;
-    justify-content: space-between;
-    gap: 10px;
-  }
-  
-  .footer-about h3 {
-    font-size: 1.5rem;
-    margin-bottom: 20px;
-    margin-left: 20px;
-  }
-  
-  .footer-links h3{
-    font-size: 1.2rem;
-    margin-bottom: 20Px;
-    text-align: left;
-  }
-  
-  .footer-links ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .footer-links ul li {
-    margin-bottom: 5px; 
-  }
-  
-  .footer-links ul li a {
-    color: #ccc;
-    text-decoration: double;
-    font-size: 1rem;
-    transition: color 0.3s ease;
-    cursor: pointer;
-    margin-bottom: 5px;
-  }
-  
-  .footer-links a{
+    flex-direction: column;
+    padding-top: 20px;
     margin: 0;
+    width: 100%;
   }
-  
-  .footer-social .social-icons {
-    display: flex;
-    align-items: flex-end;
-    gap: 20px;
-  }
-  
-  .footer-social h4{
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-    margin-left: 150px;
-  }
-  
-  .footer-bottom {
-    align-items: flex-start;
-    text-align:justify;
-    margin-top: 100px;
-    font-size: 0.9rem;
-    color: #aaa;
-  }
+}
