--- a/(FE)/css/contact.css
+++ b/(FE)/css/contact.css
@@ -221,30 +221,97 @@ body {
 }
 
 
-  /* Footer */
-  .footer {
-    padding: 20px;
-    text-align: center;
-  }
+.footer {
+  width: 100%;
+  height: 300px;
+  background-color: #333;
+  color: #fff;
+  margin-top: 40px;
+}
 
-  .footer-container {
-    flex-direction: column;
-  }
+.footer-container {
+  display: flex;
+  align-items: flex-start;
+}
 
-  .footer-links,
-  .footer-service,
-  .footer-social {
-    margin: 20px 0;
-  }
+.footer-links{
+  margin-left: 40px;
+  margin-top: 50px;
+}
 
-  .footer-links ul,
-  .footer-service ul {
-    padding: 0;
-    text-align: center;
-  }
+.footer-links h3{
+  font-size: 1.2rem;
+  text-align: left;
+  margin-bottom: 10px;    
+}
 
-  .footer-bottom {
-    font-size: 0.8rem;
-    margin: 10px 0 0;
-  }
+.footer-links ul {
+  list-style-type: none;
+  margin-top: 30px;
+}
 
+.footer-links ul li a {
+  color: #ccc;
+  text-decoration: double;
+  font-size: 1.1rem;
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
+
+.footer-links a{
+  margin-top: 20px;
+}
+
+.footer-service{
+  margin-top: 50px;
+  margin-left: 150px;
+}
+
+.footer-service h3{
+  font-size: 1.2rem;
+  text-align: left;
+}
+
+.footer-service ul{
+  list-style-type: none;
+  padding: 10px;
+  margin-top: 30px;
+}
+
+.footer-service ul li a {
+  color: #ccc;
+  text-decoration: double;
+  font-size: 1rem;
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
+
+.footer-social .social-icons {
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+  margin-top: 30px;
+  margin-left: 350px;
+  cursor: pointer;
+}
+
+.social-icons img{
+  width: 20px;
+  height: auto;
+  margin-left: 200px;
+}
+
+.footer-social h4{
+  font-size: 1.2rem;
+  margin-top: 50px;
+  margin-left: 550px;
+}
+
+.footer-bottom {
+  position: absolute;
+  text-align: center;
+  font-size: 0.9rem;
+  color: #aaa;
+  margin-top: 70px;
+  margin-left: 30px;
+}
